@@ -14,6 +14,7 @@ Version history:
 - added GetCanvasDir to retrieve folder in which the patcher resides
 - better handling of click callback
 - more compatible handling of attributes in patcher (hiding is now an option - define FLEXT_ATTRHIDE)
+- added header file flfeatures.h for compile-time detection of version-specific features
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
